Fixed spacing issues

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ window#waybar {
 
 #clock {
     padding: 0 0px;
-    padding-left: 0px;
+    padding-left: 3px;
     padding-right: 0px;
 }
 
